# deskmic

./: .commitmsg  .env.example  .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-16-deskmic-design.md  2026-02-16-deskmic-implementation.md  2026-02-16-settings-feature.md  2026-02-18-configurable-summarization-design.md  2026-02-18-setup-wizard-design.md  2026-02-19-audio-capture-reliability-design.md  2026-03-16-transcript-search-design.md  2026-03-17-transcript-search-impl.md
scripts/: deskmic-index-and-sync.cmd  deskmic-sync  deskmicctl  setup.sh
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  monitoring.rs  recorder.rs  setup.rs  storage.rs  tray.rs
src/audio/: capture.rs  file_writer.rs  mod.rs  pipeline.rs  ring_buffer.rs  teams_capture.rs  teams_monitor.rs  vad.rs
src/search/: chunker.rs  db.rs  embeddings.rs  indexer.rs  mod.rs
src/summarize/: email.rs  html.rs  llm.rs  mod.rs  prompt.rs  runner.rs
src/transcribe/: azure_openai.rs  backend.rs  mod.rs  runner.rs  state.rs  status.rs  whisper_local.rs
tests/: integration.rs
