[package]
name = "deskmic"
version = "0.1.0"
edition = "2021"
description = "Always-on Windows audio recorder with VAD and batch transcription"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# WAV writing
hound = "3.5"

# Process enumeration
sysinfo = "0.38"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
ctrlc = { version = "3.4", features = ["termination"] }
thiserror = "2"

# Transcription (cloud)
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

[dev-dependencies]
tempfile = "3"

# Windows-only dependencies
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22"
voice_activity_detector = "0.2"
tray-icon = "0.21"
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging"] }
whisper-rs = "0.15"
